# cosmopp

./: CMakeLists.txt  Makefile  changes_since_last_version.md  cmake_settings_template.txt  doxyfile  make_template.inc  readme.txt
data/: old_ucmh_pulsar_1000.txt  old_ucmh_pulsar_200.txt  old_ucmh_pulsar_500.txt  ucmh_gamma_1000.txt  ucmh_gamma_200.txt  ucmh_gamma_500.txt  ucmh_gamma_weakened.txt  ucmh_int_factor.txt  ucmh_pulsar_1000.txt  ucmh_pulsar_200.txt  ucmh_pulsar_500.txt  ucmh_pulsar_weakened.txt
examples/: CMakeLists.txt  example_cl.cpp  example_metropolis_hastings.cpp  example_mn_combined.cpp  example_mn_planck.cpp  example_planck.cpp
include/: angular_coordinates.hpp  bao_like.hpp  best_fit.hpp  c_matrix.hpp  c_matrix_generator.hpp  chi_squared.hpp  cmb.hpp  cmb_gibbs.hpp  combined_like.hpp  complex_types.hpp  conjugate_gradient.hpp  conjugate_gradient_general.hpp  conjugate_gradient_optimization.hpp  cosmo_mpi.hpp  cosmological_params.hpp  cubic_spline.hpp  exception_handler.hpp  expressions.hpp  fast_approximator.hpp  fast_approximator_error.hpp  field_solver.hpp  fit.hpp  function.hpp  gauss_smooth.hpp  gaussian_process.hpp  h0_like.hpp  histogram.hpp  hmc.hpp  hmc_general.hpp  inflation.hpp  int_operations.hpp  integral.hpp  k_nearest_neighbors.hpp  kd_tree.hpp  lbfgs.hpp  lbfgs_general.hpp  learn_as_you_go.hpp  legendre.hpp  likelihood.hpp  likelihood_function.hpp  (+84 more)
ipython/: ucmh.ipynb
python_examples/: contour_plot.py  function_plot.py  mh_example_contour.py  mh_example_x_plot.py  mh_example_y_plot.py
source/: CMakeLists.txt  analyze_chain.cpp  analyze_ucmh.cpp  apodize_mask.cpp  axion_de_scan.cpp  c_matrix.cpp  c_matrix_generator.cpp  cg_test.cpp  cmb.cpp  cmb_gibbs.cpp  contour_plot.cpp  cosmo_mpi.cpp  derived_ucmh_chain.cpp  expressions_test.cpp  fast_approximator.cpp  fast_approximator_error.cpp  field_solver.cpp  gaussian_process.cpp  generate_white_noise.cpp  hmc.cpp  hmc_general_test.cpp  inflation.cpp  k_nearest_neighbors.cpp  kd_tree.cpp  knotted.cpp  lbfgs.cpp  lbfgs_test.cpp  lbfgs_test_new.cpp  learn_as_you_go.cpp  likelihood.cpp  macros.cpp  markov_chain.cpp  mask_apodizer.cpp  master.cpp  matrix_impl.cpp  matter_likelihood.cpp  mcmc.cpp  mn_axion_de.cpp  mn_planck_run.cpp  mn_planck_run_run.cpp  (+78 more)
test_files/: mask1.fits  parser_test.txt
