cmake_minimum_required (VERSION 2.8.10)

if(LAPACK_LIB_FLAGS)
	add_executable(example_metropolis_hastings example_metropolis_hastings.cpp)
	target_link_libraries(example_metropolis_hastings cosmopp)
	if(MPI_FOUND)
		target_link_libraries(example_metropolis_hastings ${MPI_CXX_LIBRARIES})
	endif(MPI_FOUND)
	target_link_libraries(example_metropolis_hastings ${LAPACK_LIB_FLAGS})
	install(TARGETS example_metropolis_hastings DESTINATION bin)
endif(LAPACK_LIB_FLAGS)

if(CLASS_DIR)
	add_executable(example_cl example_cl.cpp)
	target_link_libraries(example_cl cosmopp)
	if(MPI_FOUND)
		target_link_libraries(example_cl ${MPI_CXX_LIBRARIES})
	endif(MPI_FOUND)
	target_link_libraries(example_cl ${CLASSLIB})
	install(TARGETS example_cl DESTINATION bin)
endif(CLASS_DIR)

if(CLASS_DIR AND PLANCK_DIR)
	add_executable(example_planck example_planck.cpp)
	target_link_libraries(example_planck cosmopp)
	if(MPI_FOUND)
		target_link_libraries(example_planck ${MPI_CXX_LIBRARIES})
	endif(MPI_FOUND)
	target_link_libraries(example_planck ${CLASSLIB})
	target_link_libraries(example_planck ${PLANCKLIB})
	install(TARGETS example_planck DESTINATION bin)
endif(CLASS_DIR AND PLANCK_DIR)

if(CLASS_DIR AND MULTINEST_DIR AND PLANCK_DIR)
	add_executable(example_mn_planck example_mn_planck.cpp)
	target_link_libraries(example_mn_planck cosmopp)
	if(MPI_FOUND)
		target_link_libraries(example_mn_planck ${MPI_CXX_LIBRARIES})
	endif(MPI_FOUND)
	target_link_libraries(example_mn_planck ${CLASSLIB})
	target_link_libraries(example_mn_planck ${MULTINESTLIB})
	target_link_libraries(example_mn_planck ${PLANCKLIB})
	install(TARGETS example_mn_planck DESTINATION bin)
endif(CLASS_DIR AND MULTINEST_DIR AND PLANCK_DIR)
